--- a/conf/translation/Surveys_fr.properties
+++ b/conf/translation/Surveys_fr.properties
@@ -108,9 +108,9 @@ action.effective-consumption-reduction.label=Mes actions en kWh par jour sur la 
 
 # ACCOUNT
 account.personaldata.title=Informations d'inscription
-account.powerprovider.label=Fournisseur d'électricité (optionnel)
-account.powerconsumercategory.label=Votre consommation d'électricité annuelle (optionnel)
-account.zip.label=Code postal (optionnel)
+account.powerprovider.label=Fournisseur d'électricité
+account.powerconsumercategory.label=Votre consommation d'électricité annuelle
+account.zip.label=Code postal
 powerconsumercategory.options.0.label=Moins de 2500 kWh/an
 powerconsumercategory.options.1.label=3501 à 4501 kWh/an
 powerconsumercategory.options.2.label=4501 à 6000 kWh/an
