--- a/conf/translation/Surveys_nl.properties
+++ b/conf/translation/Surveys_nl.properties
@@ -108,9 +108,9 @@ action.effective-consumption-reduction.label=Mijn acties in kWh per dag over de 
 
 # ACCOUNT
 account.personaldata.title=Informatie over de inschrijving
-account.powerprovider.label=Elektriciteitsleverancier (optioneel)
-account.powerconsumercategory.label=Uw jaarlijks elektrisch verbruik (optioneel)
-account.zip.label=Postcode (optioneel)
+account.powerprovider.label=Elektriciteitsleverancier
+account.powerconsumercategory.label=Uw jaarlijks elektrisch verbruik
+account.zip.label=Postcode
 powerconsumercategory.options.0.label=Minder dan 2500 kWh/jaar
 powerconsumercategory.options.1.label=Tussen 3501 en 4501 kWh/jaar
 powerconsumercategory.options.2.label=Tussen 4501 en 6000 kWh/jaar
