--- a/conf/translation/Interfaces_nl.properties
+++ b/conf/translation/Interfaces_nl.properties
@@ -9,6 +9,7 @@ filter.toHour.hour.suffix=u
 filter.toSquareMeters.m2.suffix=m<sup>2</sup>
 filter.toWatts.w.suffix=W
 nav.to-actions=Naar de acties
+nav.to-results=Naar de resultaten
 nav.back-to-welcome=Terug naar de startpagina
 nav.back-to-profile=Terug naar profiel
 nav.back-to-actions=Terug naar acties
@@ -31,6 +32,7 @@ welcome.button.forgotPassword=Stuur het nieuw paswoord op.
 #GENERIC
 generic.save=Opslaan
 generic.household=Huishouden
+generic.authority=Overheidsinstantie
 generic.enterprise=Onderneming
 generic.valid=Bevestigen
 generic.close=Sluiten
