--- a/conf/translation/Interfaces_fr.properties
+++ b/conf/translation/Interfaces_fr.properties
@@ -8,10 +8,12 @@ filter.toHour.hour.suffix=h
 filter.toSquareMeters.m2.suffix=m<sup>2</sup>
 filter.toWatts.w.suffix=W
 nav.to-actions=Passer aux actions
+nav.to-results=Passer aux résultats
 nav.back-to-welcome=Revenir à l'accueil
 nav.back-to-profile=Revenir au profil
 nav.back-to-actions=Revenir aux actions
 nav.to-identification=Terminer
+
 
 
 # HOUSEHOLD.REGISTRATION
@@ -30,6 +32,7 @@ welcome.button.forgotPassword=Envoyer le nouveau mot de passe
 generic.save=Save
 generic.household=Ménage
 generic.enterprise=Entreprise
+generic.authority=Pouvoirs publics
 generic.valid=Valider
 generic.close=Fermer
 generic.yes=Oui
