--- a/conf/translation/Surveys_nl.properties
+++ b/conf/translation/Surveys_nl.properties
@@ -128,25 +128,26 @@ account.info.repeatPassword=Herhaaal het paswoord
 account.info.oldPassword=Uw oud paswoord
 account.info.newPassword=Uw nieuw paswoord
 Q5210.options.0.label=Belpower
-Q5210.options.1.label=EBEM
-Q5210.options.2.label=Ecopower
-Q5210.options.3.label=Electrabel
-Q5210.options.4.label=Elegant
-Q5210.options.5.label=Eneco
-Q5210.options.6.label=Energie2030
-Q5210.options.7.label=Energy People
-Q5210.options.8.label=eni
-Q5210.options.9.label=Essent
-Q5210.options.10.label=Lampiris
-Q5210.options.11.label=Luminus
-Q5210.options.12.label=Mega
-Q5210.options.13.label=Octa+
-Q5210.options.14.label=Poweo
-Q5210.options.15.label=Tarif Social
-Q5210.options.16.label=Trevion
-Q5210.options.17.label=Wase Wind
-Q5210.options.18.label=Watz
-Q5210.options.19.label=Ik weet het niet
+Q5210.options.1.label=Direct énergie
+Q5210.options.2.label=EBEM
+Q5210.options.3.label=Ecopower
+Q5210.options.4.label=Electrabel
+Q5210.options.5.label=Elegant
+Q5210.options.6.label=Eneco
+Q5210.options.7.label=Energie2030
+Q5210.options.8.label=Energy People
+Q5210.options.9.label=eni
+Q5210.options.10.label=Essent
+Q5210.options.11.label=Lampiris
+Q5210.options.12.label=Luminus
+Q5210.options.13.label=Mega
+Q5210.options.14.label=Octa+
+Q5210.options.15.label=Poweo
+Q5210.options.16.label=Tarif Social
+Q5210.options.17.label=Trevion
+Q5210.options.18.label=Wase Wind
+Q5210.options.19.label=Watz
+Q5210.options.20.label=Ik weet het niet
 account.errorMessage.firstName=tussen 2 en 100 lettertekens
 account.errorMessage.lastName=tussen 2 en 100 lettertekens
 account.errorMessage.emailAddress=e-mail adres ongeldig
