--- a/conf/translation/Surveys_fr.properties
+++ b/conf/translation/Surveys_fr.properties
@@ -159,3 +159,4 @@ account.terms.modal.title=Termes et conditions
 account.button.changePassword=Changer de mot de passe
 account.button.changeEmail=Changer d'adresse e-mail
 account.info.newEmail=Votre nouvelle adresse e-mail
+account.kit.label=Recevoir le kit de sensibilisation
