--- a/conf/translation/Interfaces_fr.properties
+++ b/conf/translation/Interfaces_fr.properties
@@ -22,7 +22,7 @@ household.modal.registration.title=Informations d'inscription
 # WELCOME
 welcome.button.login=Connexion
 welcome.login_message=J'ai déjà un compte Citizens' Reserve
-welcome.title=Bienvenue sur Citizen's Reserve !
+welcome.title=Bienvenue sur Citizens' Reserve !
 welcome.choose_message=Je m'incris en tant que
 welcome.forgot_password=Mot de passe oublié ?
 welcome.forgot_password.desc=Entrez votre adresse e-mail et un nouveau mot de passe vous sera envoyé.
