--- a/conf/translation/Interfaces_nl.properties
+++ b/conf/translation/Interfaces_nl.properties
@@ -79,4 +79,7 @@ results.title=Proficiat!
 results.intro=U bent nu officieel onze <large><b>{0} ste</b></large> energie-reservist
 result.result=Uw acties hebben <large><b>{0} watt</b></large> toegevoegd aan onze afschakelreserve en deze bedraagt nu <large><b>{1} kW</b></large>.<br/>Hierbij uw afschakelprofiel tussen 17u et 20u.
 result.outro=Wij danken u hartelijk voor uw deelname en uw gegevens worden u verstuurd per e-mail.<br/>Op elk moment kan u zich opnieuw aanmelden op Citizens' Reserve met uw login en paswoord.
+logout=Afmelden
+results.stack.name=U
+results.trend.name=Uw profiel
 
