--- a/conf/translation/Interfaces_fr.properties
+++ b/conf/translation/Interfaces_fr.properties
@@ -79,4 +79,4 @@ results.intro=Vous êtes officiellement notre <large><b>{0} ème</b></large> ré
 result.result=Vos actions ont ajouté <large><b>{0} watts</b></large> dans la réserve d'effacement citoyenne qui s'élève désormais à <large><b>{1} kW</b></large>.<br/>Voici votre profil d'effacement entre 17 et 20 h.
 result.outro=Nous vous remercions chaleureusement de votre participation et vous envoyons vos informations par email.<br/>Vous pouvez à tout moment vous reconnecter sur Citizens' Reserve avec votre login et mot de passe.
 results.stack.name=Vous
-results.trend.name=Tendance
+results.trend.name=Votre profil
