--- a/conf/translation/Surveys_nl.properties
+++ b/conf/translation/Surveys_nl.properties
@@ -160,3 +160,4 @@ account.terms.modal.title=Algemene Voorwaarden
 account.button.changePassword=Verander het paswoord
 account.button.changeEmail=Verander het e-mail adres
 account.info.newEmail=Uw nieuwe e-mail adres
+account.kit.label=Ontvang de sensibiliseringskit
