--- a/conf/translation/Surveys_nl.properties
+++ b/conf/translation/Surveys_nl.properties
@@ -112,7 +112,7 @@ account.powerprovider.label=Elektriciteitsleverancier
 account.powerconsumercategory.label=Uw jaarlijks elektrisch verbruik
 account.zip.label=Postcode
 powerconsumercategory.options.0.label=Minder dan 2500 kWh/jaar
-powerconsumercategory.options.1.label=Tussen 2501 à 3500 kWh/jaar
+powerconsumercategory.options.1.label=Tussen 2501 en 3500 kWh/jaar
 powerconsumercategory.options.2.label=Tussen 3501 en 4501 kWh/jaar
 powerconsumercategory.options.3.label=Tussen 4501 en 6000 kWh/jaar
 powerconsumercategory.options.4.label=Meer dan 6000 kWh/jaar
