--- a/conf/translation/Surveys_nl.properties
+++ b/conf/translation/Surveys_nl.properties
@@ -43,7 +43,7 @@ Q1750.options.3.label=voornamelijk klassieke gloeilampen en halogeenlampen
 
 Q1800.label=Geef inschatting van het gezamenlijk vermogen in watt van uw <u>buitenspots/buitenverlichting</u> die continu branden vanaf zonsondergang (kies 0 indien niet van toepassing)
 Q1800.low-value.warning=Bent u zeker? Deze waarde lijkt aan de lage kant!
-Q2000.label=Geef voor volgende toestellen uw gebruik op tijdens weekdagen (periode maandag-vrijdag)
+Q2000.label=Geef voor volgende toestellen uw gebruik op tijdens weekdagen (periode maandag-vrijdag) tussen 17u en 20u
 Q2010.label=Stofzuiger
 Q2010.options.0.label=bijna nooit
 Q2010.options.1.label=minder dan 15 minuten per dag
