--- a/conf/translation/Surveys_fr.properties
+++ b/conf/translation/Surveys_fr.properties
@@ -43,7 +43,7 @@ Q1750.options.3.label=principalement des ampoules classiques et halogènes
 
 Q1800.label=Au cas où vous avez des <u>spots extérieurs</u> qui sont allumés en continu dès le coucher de soleil, donnez la puissance estimée en Watt pour l'ensemble de ces spots (0 si pas d'application)
 Q1800.low-value.warning=Etes vous sûr(e)? Cette valeur nous semble faible !
-Q2000.label=Pour chacun des appareils merci d'indiquer votre habitude d'utilisation en semaine (du lundi au vendredi)
+Q2000.label=Pour chacun des appareils merci d'indiquer votre habitude d'utilisation du lundi au vendredi entre 17h et 20h
 Q2010.label=Aspirateur
 Q2010.options.0.label=quasiment jamais
 Q2010.options.1.label=moins de 15 minutes par jour
