--- a/conf/translation/Interfaces_fr.properties
+++ b/conf/translation/Interfaces_fr.properties
@@ -40,8 +40,8 @@ generic.previous=Précédent
 generic.next=Suivant
 generic.firstName=Prénom
 generic.lastName=Nom
-generic.emailAddress=Addresse e-mail
-generic.password=Password
+generic.emailAddress=Adresse e-mail
+generic.password=Mot de passe
 generic.zip=Code postal
 
 #OTHER
