--- a/conf/translation/Interfaces_nl.properties
+++ b/conf/translation/Interfaces_nl.properties
@@ -77,7 +77,7 @@ register.outro=Dank, bij het bevestigen van uw deelname krijgt u een overzicht v
 #RESULTS
 results.title=Proficiat!
 results.intro=U bent nu officieel energie-reservist nr <large><b>{0} </b></large>
-result.result=Uw acties hebben <large><b>{0} watt</b></large> toegevoegd aan onze afschakelreserve en deze bedraagt nu <large><b>{1} kW</b></large>.<br/>Hierbij uw afschakelprofiel tussen 17u et 20u.
+result.result=Uw acties hebben <large><b>{0} watt</b></large> toegevoegd aan onze afschakelreserve en deze bedraagt nu <large><b>{1} kW</b></large>.<br/>Hierbij uw afschakelprofiel tussen 17u en 20u.
 result.outro=Wij danken u hartelijk voor uw deelname en uw gegevens worden u verstuurd per e-mail.<br/>Op elk moment kan u zich opnieuw aanmelden op Citizens' Reserve met uw login en paswoord.
 logout=Afmelden
 results.stack.name=U
