--- a/conf/translation/Surveys_fr.properties
+++ b/conf/translation/Surveys_fr.properties
@@ -34,12 +34,12 @@ Q1160.label=Combien de fois repassez vous du lundi au vendredi ?
 Q1220.label=Combien de frigos avez-vous ?
 Q1230.label=Combien de congélateurs avez-vous ? (considérez uniquement les congélateurs non-intégrés dans les frigos)
 Q1700.label=Nombre de jours par semaine (du lundi au vendredi) où la télévision est allumée entre 17 et 20h ?
-Q1750.label=Pour votre éclairage, vous utilisez...
+Q1750.label=Pour votre éclairage, vous utilisez principalement des ampoules...
 
-Q1750.options.0.label=principalement des ampoules économiques
-Q1750.options.1.label=principalement des ampoules économiques et halogènes
-Q1750.options.2.label=principalement des ampoules classiques
-Q1750.options.3.label=principalement des ampoules classiques et halogènes
+Q1750.options.0.label=économiques
+Q1750.options.1.label=économiques et halogènes
+Q1750.options.2.label=classiques
+Q1750.options.3.label=classiques et halogènes
 
 Q1800.label=Au cas où vous avez des <u>spots extérieurs</u> qui sont allumés en continu dès le coucher de soleil, donnez la puissance estimée en Watt pour l'ensemble de ces spots (0 si pas d'application)
 Q1800.low-value.warning=Etes vous sûr(e)? Cette valeur nous semble faible !
