--- a/conf/translation/Surveys_fr.properties
+++ b/conf/translation/Surveys_fr.properties
@@ -118,12 +118,12 @@ powerconsumercategory.options.3.label=4501 à 6000 kWh/an
 powerconsumercategory.options.4.label=Plus de 6000 kWh/an
 powerconsumercategory.options.5.label=Je ne sais pas
 account.otheremails.label=Adresses e-mail de membres de votre ménage à qui nous pouvons également envoyer les alertes
-account.sensitizationkit.label= Je souhaite recevoir un kit de sensibilisation
+account.sensitizationkit.label= Je souhaite recevoir un kit de sensibilisation pour faire connaitre l'initiative à des amis, voisins, collègues, ...
 sensitizationkit.options.0.label=pour mes collègues
 sensitizationkit.options.1.label=mes voisins
 sensitizationkit.options.2.label=mes amis
 account.info.summaryemail.label=Vous allez recevoir un e-mail récapitulatif, qui vous permettra de confirmer votre inscription
-account.info.terms&conditions.label=Conditions générales et politique de confidentialité
+account.info.terms&conditions.label=J'accepte les conditions générales et politique de confidentialité
 account.info.repeatPassword=Répétez le mot de passe
 account.info.oldPassword=Votre ancien mot de passe
 account.info.newPassword=Votre nouveau mot de passe
