--- a/conf/translation/Surveys_nl.properties
+++ b/conf/translation/Surveys_nl.properties
@@ -96,7 +96,7 @@ Q3710.label=Koud eten, koken voor 17u of na 20u
 Q3711.label=Bij risico op stroomonderbreking gedurende meerdere opeenvolgende dagen, gedurende hoeveel opeenvolgende dagen bent u bereid deze actie te ondernemen?
 Q3720.label=Op de dagen dat u kookt, de elektrische kookplaten niet gebruiken tussen 17u en 20u
 Q3730.label=Op de dagen dat u kookt, de elektrische oven niet gebruiken tussen 17u en 20u
-Q3740.label=... huishoudens (geef aantal) uitnodigen (vrienden, familie, buren, ...) om te komen eten en hen vragen om in hun eigen woonst zo goed als alle elektrische apparaten en verlichting uit te schakelen vanaf 17u
+Q3740.label=Vrienden, familie, buren, ...uitnodigen om te komen eten en hen vragen om in hun eigen woonst zo goed als alle elektrische apparaten en verlichting uit te schakelen vanaf 17u. Hoeveel huishoudens nodigt u uit?
 Q3740.tooltip=Nodig vooral mensen uit die thuis elektrisch koken! ;-)
 Q3741.label=Bij risico op stroomonderbreking gedurende meerdere opeenvolgende dagen, gedurende hoeveel opeenvolgende dagen bent u bereid deze actie te ondernemen?
 Q3750.label=Op de dagen dat u kookt, de microgolfoven niet gebruiken tussen 17u en 20u
