--- a/conf/translation/Surveys_fr.properties
+++ b/conf/translation/Surveys_fr.properties
@@ -118,7 +118,7 @@ powerconsumercategory.options.3.label=4501 à 6000 kWh/an
 powerconsumercategory.options.4.label=Plus de 6000 kWh/an
 powerconsumercategory.options.5.label=Je ne sais pas
 account.otheremails.label=Adresses e-mail de membres de votre ménage à qui nous pouvons également envoyer les alertes
-account.sensitizationkit.label= Je souhaite recevoir un kit de sensibilisation pour faire connaitre l'initiative à des amis, voisins, collègues, ...
+account.sensitizationkit.label=Recevoir le kit de sensibilisation
 sensitizationkit.options.0.label=pour mes collègues
 sensitizationkit.options.1.label=mes voisins
 sensitizationkit.options.2.label=mes amis
@@ -160,4 +160,4 @@ account.terms.modal.title=Termes et conditions
 account.button.changePassword=Changer de mot de passe
 account.button.changeEmail=Changer d'adresse e-mail
 account.info.newEmail=Votre nouvelle adresse e-mail
-account.kit.label=Recevoir le kit de sensibilisation
+account.kit.label=Je souhaite recevoir un kit de sensibilisation pour faire connaitre l'initiative à des amis, voisins, collègues, ...
