--- a/conf/translation/Surveys_fr.properties
+++ b/conf/translation/Surveys_fr.properties
@@ -122,7 +122,7 @@ account.sensitizationkit.label=Recevoir le kit de sensibilisation
 sensitizationkit.options.0.label=pour mes collègues
 sensitizationkit.options.1.label=mes voisins
 sensitizationkit.options.2.label=mes amis
-account.info.summaryemail.label=Vous allez recevoir un e-mail récapitulatif, qui vous permettra de confirmer votre inscription
+account.info.summaryemail.label=Vous allez recevoir un e-mail récapitulatif
 account.info.terms&conditions.label=J'accepte les conditions générales et politique de confidentialité
 account.info.repeatPassword=Répétez le mot de passe
 account.info.oldPassword=Votre ancien mot de passe
