--- a/conf/translation/Surveys_nl.properties
+++ b/conf/translation/Surveys_nl.properties
@@ -122,8 +122,8 @@ account.sensitizationkit.label=Ik zou graag een sensibiliseringskit ontvangen
 sensitizationkit.options.0.label=voor m'n collega's
 sensitizationkit.options.1.label=m'n buren
 sensitizationkit.options.2.label=m'n vrienden
-account.info.summaryemail.label=U zal een e-mail ontvangen met een samenvatting en de vraag om uw inschrijving te bevestigen
-account.info.terms&conditions.label=Algemene Voorwaarden met betrekking tot confidentialiteit
+account.info.summaryemail.label=U zal een e-mail ontvangen met een samenvatting
+account.info.terms&conditions.label=Ik aanvaard de algemene voorwaarden
 account.info.repeatPassword=Herhaaal het paswoord
 account.info.oldPassword=Uw oud paswoord
 account.info.newPassword=Uw nieuw paswoord
