--- a/conf/translation/Surveys_fr.properties
+++ b/conf/translation/Surveys_fr.properties
@@ -125,6 +125,7 @@ sensitizationkit.options.2.label=mes amis
 account.info.summaryemail.label=Vous allez recevoir un e-mail récapitulatif
 account.info.terms&conditions.label=J'accepte les conditions générales et politique de confidentialité
 account.info.repeatPassword=Répétez le mot de passe
+account.info.currentPassword=Votre mot de passe
 account.info.oldPassword=Votre ancien mot de passe
 account.info.newPassword=Votre nouveau mot de passe
 Q5210.options.0.label=Belpower
