--- a/conf/translation/Surveys_nl.properties
+++ b/conf/translation/Surveys_nl.properties
@@ -161,3 +161,4 @@ account.button.changePassword=Verander het paswoord
 account.button.changeEmail=Verander het e-mail adres
 account.info.newEmail=Uw nieuwe e-mail adres
 account.kit.label=Ontvang de sensibiliseringskit
+account.info.currentPassword=Uw paswoord
