--- a/conf/translation/Interfaces_nl.properties
+++ b/conf/translation/Interfaces_nl.properties
@@ -54,11 +54,11 @@ account.save.success=Uw gegevens zijn nu opgeslagen
 account.forgotPassword.success=Een e-mail met uw nieuw paswoord is verstuurd naar uw e-mail adres
 account.login.success=U bent verbonden
 
-# NEW !!! 
+# NEW !!!
 # WELCOME
 welcome.title2=1/4 Wie ben ik?
 welcome.intro=Ik schrijf me in als
-welcome.outro=Dank voor uw deelname aan Citizens' Reserve! 
+welcome.outro=Dank voor uw deelname aan Citizens' Reserve!
 # PROFILE
 profile.title=2/4 Mijn verbruiksprofiel
 profile.intro=Geef aub uw elektrisch verbruik op voor <b>WEEKDAGEN (MAANDAG - VRIJDAG)</b>
@@ -67,8 +67,8 @@ profile.outro_1=Als uw verbruiksprofiel volledig is ingevuld (de 5 rubrieken), g
 profile.outro_2=In de volgende stap berekenen we uw afschakelreserve
 #ACTIONS
 actions.title=3/4 Mijn afschakelreserve
-actions.intro=Op basis van uw verbruiksprofiel hebben we de meest aangewezen acties opgelijst om uw vermogen te verminderen. Deze zijn opgenomen in de 5 rubrieken hieronder.<br/>Maak uw keuzes! 
-actions.result=Mooi, uw acties zouden toelaten om <large><b>{0} watt</b></large> toe te voegen aan onze afschakelreserve! 
+actions.intro=Op basis van uw verbruiksprofiel hebben we de meest aangewezen acties opgelijst om uw vermogen te verminderen. Deze zijn opgenomen in de 5 rubrieken hieronder.<br/>Maak uw keuzes!
+actions.result=Mooi, uw acties zouden toelaten om <large><b>{0} watt</b></large> toe te voegen aan onze afschakelreserve!
 actions.outro=Om deze definitief vast te leggen, gelieve u aub in te schrijven in de volgende stap
 #REGISTER
 register.title=4/4 Ik word energie-reservist
@@ -82,4 +82,5 @@ result.outro=Wij danken u hartelijk voor uw deelname en uw gegevens zijn u overg
 logout=Afmelden
 results.stack.name=U
 results.trend.name=Uw profiel
+results.followus=Volg de Facebook en Twitter pagina’s en deel het initiatief op de sociale media \:
 
