--- a/conf/translation/Interfaces_fr.properties
+++ b/conf/translation/Interfaces_fr.properties
@@ -31,7 +31,7 @@ welcome.button.forgotPassword=Envoyer le nouveau mot de passe
 generic.save=Enregistrer
 generic.household=Ménage
 generic.enterprise=Entreprise
-generic.authority=Pouvoirs publics
+generic.authority=Pouvoir public
 generic.valid=Valider
 generic.close=Fermer
 generic.yes=Oui
@@ -43,6 +43,7 @@ generic.lastName=Nom
 generic.emailAddress=Adresse e-mail
 generic.password=Mot de passe
 generic.zip=Code postal
+generic.comingsoon=Bientôt disponible !
 
 #OTHER
 logout=Déconnexion
