--- a/conf/translation/Interfaces_nl.properties
+++ b/conf/translation/Interfaces_nl.properties
@@ -83,4 +83,5 @@ logout=Afmelden
 results.stack.name=U
 results.trend.name=Uw profiel
 results.followus=Volg de Facebook en Twitter pagina’s en deel het initiatief op de sociale media \:
+generic.comingsoon=Binnenkort bereikbaar \!
 
