--- a/conf/translation/Interfaces_fr.properties
+++ b/conf/translation/Interfaces_fr.properties
@@ -60,7 +60,7 @@ welcome.title2=1/4 Qui suis-je?
 welcome.intro=Je m'enregistre en tant que
 welcome.outro=Merci de votre soutien à Citizens' Reserve !
 # PROFILE
-profile.title=2/4 Mon profil de consommation
+profile.title=2/4 Mo    n profil de consommation
 profile.intro=Merci de renseigner vos usages électriques pour <b>LES JOURS DE SEMAINE (LUNDI - VENDREDI) UNIQUEMENT</b>
 profile.result=Votre puissance moyenne est de <large><b>{0} watts</b></large> entre 17 et 20 h du lundi au vendredi
 profile.outro_1=Quand votre profil est complet (les 5 rubriques), passez à l'étape suivante pour calculer votre capacité d'effacement
@@ -82,3 +82,16 @@ result.outro=Nous vous remercions chaleureusement de votre participation et vous
 results.stack.name=Vous
 results.trend.name=Votre profil
 results.followus=Suivez nos pages Facebook et Twitter et partagez l'initiative sur les réseaux sociaux :
+
+account.terms= \
+    <p>Il vous est loisible de visiter notre site internet sans nous fournir de données à caractère personnel [1].  Vous pouvez accéder à la base de calcul et de résultats en ne saisissant que des données générales à caractère non personnel. Toutefois, pour que votre contribution à la Citizens' Reserve soit comptabilisée, il est nécessaire de vous enregistrer formellement et de nous fournir des informations personnelles. </p>\
+    <p>Si vous nous fournissez des informations personnelles [2], elles seront traitées conformément aux dispositions de la loi du 8 décembre 1992. </p>\
+    <p>Les données de contact fournies seront utilisées pour vous adresser des messages d'alerte vous demandant de mettre les actions d'effacement en oeuvre pour les jours suivants (chaque alerte sera envoyée la veille au plus tard pour vous permettre de planifier les actions). </p>\
+    <p>Les données de profil de consommation sont utilisées à des fins d'études et de profilage statistique pour améliorer notre modèle de calcul des courbes d'effacement. Votre code postal nous permet de localiser les réservistes énergétiques afin de mieux collaborer avec les opérateurs de réseau. </p>\
+    <p>Les données relatives à votre fournisseur permettent de calculer la capacité d’effacement de Citizens’ Reserve pour chaque acteur du marché. Elles pourront être utilisées de façon à être intégrées dans leurs prévisions, et, de ce fait, aider à baisser la demande de courant en J-1, en vue de faire baisser le risque de pénurie électrique. </p>\
+    <p>Les données saisies en ligne et les résultats associés seront traités collectivement et anonymement en vue de produire des profils d'effacement aggrégés à communiquer aux différents acteurs du marché de l'énergie (opérateurs de réseau et fournisseurs). Ces données et résultats pourront être exploités, en totalité ou en partie, en vue de réalisations statistiques, de réalisations de rapports ou d’études relatives à l'effacement de la consommation d’énergie diffuse. </p>\
+    <p>Aucune donnée personnelle ne sera jamais communiquée à des tiers, ni utilisée à des fins commerciales. </p>\
+    <p>[1] La loi du 8 décembre 1992 relative au traitement de données à caractère personnel entend par « données à caractère personnel », « toute information concernant une personne physique identifiée ou identifiable […] ; est réputée identifiable une personne qui peut être identifiée, directement ou indirectement, notamment par référence à un numéro d’identification ou à un plusieurs éléments spécifiques, propres à son identité physique, physiologique, psychique, économique, culturelle ou sociale. » </p>\
+    <p>[2] Pour les personnes physiques, via la création d’un espace personnel sur le site avec votre e-mail et un mot de passe. </p>
+
+
