--- a/conf/translation/Interfaces_nl.properties
+++ b/conf/translation/Interfaces_nl.properties
@@ -84,4 +84,16 @@ results.stack.name=U
 results.trend.name=Uw profiel
 results.followus=Volg de Facebook en Twitter pagina’s en deel het initiatief op de sociale media \:
 generic.comingsoon=Binnenkort bereikbaar \!
+account.terms= \
+    <p>U kan onze internet site bezoeken zonder mededeling van persoonsgegevens [1]. U heeft toegang tot de berekeningen en resultaten mits opgave van louter algemene gegevens. Opdat uw bijdrage tot Citizens’ Reserve kan doorgerekend worden in onze afschakelreserve, is het evenwel noodzakelijk dat u zich formeel registreert en ook persoonsgegevens overmaakt.</p>\
+    <p>Als u persoonsgegevens overmaakt [2], zullen deze behandeld worden in overeenstemming met de Wet van 8 december 1992.</p>\
+    <p>De overgemaakte contactgegevens zullen gebruikt worden om u in te lichten over een aankomend risico op stroomafschakeling en u te vragen om uw afschakelreserve in te zetten (wij trachten u minimaal één dag op voorhand in te lichten).</p>\
+    <p>De gegevens over het verbruiksprofiel zullen gebruikt worden om onze totale afschakelreserve bij te stellen. Uw postcode laat ons toe om onze energie-reservisten te lokaliseren en overleg met de netwerkbeheerder te ondersteunen.</p>\
+    <p>De gegevens met betrekking tot uw elektriciteitsleverancier laten toe om de afschakelcapaciteit van Citizens’ Reserve te relateren tot de actoren in de markt. Deze capaciteit kan dan geïntegreerd worden in de voorspellingen van de betrokken actoren. Dit kan dan bijdragen tot een daling van de vraag naar stroom en alsook van het risico op elektriciteitstekort.</p>\
+    <p>De gegevens die u on line registreert en de gerelateerde resultaten zullen collectief en anoniem behandeld worden om de totale afschakelreserve te bepalen die aan de verschillende actoren van de energiemarkt gecommuniceerd kan worden (netwerkbeheerders en leveranciers). Deze gegevens en resultaten kunnen geheel of gedeeltelijk gebruikt worden voor statistische berekeningen, het opmaken van rapporten of studies over het afschakelen van het diffuus energieverbruik.</p>\
+    <p>Geen van de overgemaakte persoonsgegevens zal ter beschikking worden gesteld van derden. De gegevens zullen ook niet gebruikt worden voor commerciële doeleinden.</p>\
+    <p>[1] Volgens de Wet van 8 december 1992 tot bescherming van de persoonlijke levenssfeer ten opzichte van de verwerking van persoonsgegevens, verstaat men onder «persoonsgegevens» iedere informatie betreffende een geïdentificeerde of identificeerbare natuurlijke persoon […]; als «identificeerbaar» wordt beschouwd een persoon die direct of indirect kan worden geïdentificeerd, met name aan de hand van een identificatienummer of van één of meer specifieke elementen die kenmerkend zijn voor zijn of haar fysieke, fysiologische, psychische, economische, culturele of sociale identiteit.</p>\
+    <p>[2] Voor natuurlijke personen, door het aanmaken van een persoonlijke account op de site mits registratie van een e-mail adres en paswoord.</p>
+
+
 
