--- a/conf/translation/Interfaces_fr.properties
+++ b/conf/translation/Interfaces_fr.properties
@@ -60,7 +60,7 @@ welcome.title2=1/4 Qui suis-je?
 welcome.intro=Je m'enregistre en tant que
 welcome.outro=Merci de votre soutien à Citizens' Reserve !
 # PROFILE
-profile.title=2/4 Mo    n profil de consommation
+profile.title=2/4 Mon profil de consommation
 profile.intro=Merci de renseigner vos usages électriques pour <b>LES JOURS DE SEMAINE (LUNDI - VENDREDI) UNIQUEMENT</b>
 profile.result=Votre puissance moyenne est de <large><b>{0} watts</b></large> entre 17 et 20 h du lundi au vendredi
 profile.outro_1=Quand votre profil est complet (les 5 rubriques), passez à l'étape suivante pour calculer votre capacité d'effacement
