--- a/conf/translation/Surveys_nl.properties
+++ b/conf/translation/Surveys_nl.properties
@@ -71,12 +71,12 @@ Q1150.label=Hoeveel keer per week (periode maandag-vrijdag) gebruikt u een elekt
 profile.potential-average-power-reduction.label=Mijn gemiddeld vermogen in watt
 profile.potential-consumption-reduction.label=Mijn potentieel in kWh per dag over de periode 17u-20u
 # ACTIONS
-Q3210.label=Alle elektrische toestellen uitzetten of afschakelen (waaronder verlichting, elektrische verwarming, elektrische boilers, diepvriezers, warmtepompen, ...) en de woonst verlaten tussen 17u en 20u
+Q3210.label=Bent u bereid alle elektrische toestellen uit te zetten of af te schakelen (waaronder verlichting, elektrische verwarming, elektrische boilers, diepvriezers, warmtepompen, ...) en de woonst te verlaten tussen 17u en 20u?
 Q3211.label=Bij risico op stroomonderbreking gedurende meerdere opeenvolgende dagen, gedurende hoeveel opeenvolgende dagen bent u bereid deze actie te ondernemen?
 Q3211.tooltip=<b>Weet je?</b><br> Bij extreme kou is het best mogelijk dat het risico voor stroomafschakeling aanhoudt gedurende meerdere dagen!
-Q3110.label=Programmeer uw vaatwasser voor 3u 's nachts (indien niet mogelijk start dan de vaatwasser als u gaat slapen)
-Q3120.label=Programmeer uw wasmachine voor 3u 's nachts (indien niet mogelijk start dan de wasmachine als u gaat slapen)
-Q3130.label=Programmeer uw droogkast voor 3u 's nachts (indien niet mogelijk start dan de droogkast als u gaat slapen)
+Q3110.label=Programmeer uw vaatwasser om te starten om 3u 's nachts (indien niet mogelijk start dan de vaatwasser als u gaat slapen)
+Q3120.label=Programmeer uw wasmachine om te starten om 3u 's nachts (indien niet mogelijk start dan de wasmachine als u gaat slapen)
+Q3130.label=Programmeer uw droogkast om te starten om 3u 's nachts (indien niet mogelijk start dan de droogkast als u gaat slapen)
 Q3310.label=Zet de elektrische radiatoren uit tussen 17u en 20u
 Q3320.label=Zet de warmtepomp uit tussen 17u en 20u
 Q3330.label=Zet de elektrische boiler(s) uit tussen 17u en 20u
