--- a/conf/translation/Interfaces_nl.properties
+++ b/conf/translation/Interfaces_nl.properties
@@ -67,7 +67,7 @@ profile.outro_1=Als uw verbruiksprofiel volledig is ingevuld (de 5 rubrieken), g
 profile.outro_2=In de volgende stap berekenen we uw afschakelreserve
 #ACTIONS
 actions.title=3/4 Mijn afschakelreserve
-actions.intro=Op basis van uw verbruiksprofiel hebben we de meest aangewezen acties opgelijst om uw vermogen te verminderen. Deze zijn opgenomen in de 5 rubrieken hieronder.<br/>Maak uw keuzes!
+actions.intro=Op basis van uw verbruiksprofiel hebben we de meest aangewezen acties opgelijst om uw vermogen te verminderen tijdens dagen met risico op stroomtekort. Deze zijn opgenomen in de 5 rubrieken hieronder.<br/>Maak uw keuzes!
 actions.result=Mooi, uw acties zouden toelaten om <large><b>{0} watt</b></large> toe te voegen aan onze afschakelreserve!
 actions.outro=Om deze definitief vast te leggen, gelieve u aub in te schrijven in de volgende stap
 #REGISTER
