wip actions enterprise

--- a/conf/translation/Interfaces_fr.properties
+++ b/conf/translation/Interfaces_fr.properties
@@ -95,3 +95,7 @@ account.terms= \
     <p>[2] Pour les personnes physiques, via la création d’un espace personnel sur le site avec votre e-mail et un mot de passe. </p>
 
 
+enterprise.power=Puissance
+enterprise.begin=Début
+enterprise.duration=Durée
+enterprise.description=Description
