--- a/conf/translation/Surveys_fr.properties
+++ b/conf/translation/Surveys_fr.properties
@@ -162,3 +162,7 @@ account.button.changePassword=Changer de mot de passe
 account.button.changeEmail=Changer d'adresse e-mail
 account.info.newEmail=Votre nouvelle adresse e-mail
 account.kit.label=Je souhaite recevoir un kit de sensibilisation pour faire connaitre l'initiative à des amis, voisins, collègues, ...
+
+Q10110.label=PC
+Q10120.label=Serveurs
+
