Draft - Entreprises/Intitutions - Workflow - Page inscription #3
Step 2 - link to enterprise actions.

--- a/conf/translation/Interfaces_fr.properties
+++ b/conf/translation/Interfaces_fr.properties
@@ -44,6 +44,7 @@ generic.emailAddress=Adresse e-mail
 generic.password=Mot de passe
 generic.zip=Code postal
 generic.comingsoon=Bientôt disponible !
+generic.organizationName=Nom de l'organisation
 
 #OTHER
 logout=Déconnexion
