--- a/conf/translation/Interfaces_nl.properties
+++ b/conf/translation/Interfaces_nl.properties
@@ -44,7 +44,7 @@ generic.firstName=Voornaam
 generic.lastName=Naam
 generic.emailAddress=e-mail adres
 generic.password=Paswoord
-generic.zip=Postcode
+generic.organizationName=Organisatie naam
 
 #OTHER
 logout.success=U bent niet meer verbonden
