Draft - Entreprises/Intitutions - Workflow - Page inscription #3
Step 3 - navigation

--- a/conf/translation/Interfaces_fr.properties
+++ b/conf/translation/Interfaces_fr.properties
@@ -13,6 +13,7 @@ nav.back-to-welcome=Revenir à l'accueil
 nav.back-to-profile=Revenir au profil
 nav.back-to-actions=Revenir aux actions
 nav.to-identification=Terminer
+nav.back-to-identification=Revenir au compte
 
 
 
