--- a/conf/translation/Interfaces_nl.properties
+++ b/conf/translation/Interfaces_nl.properties
@@ -14,6 +14,7 @@ nav.back-to-welcome=Terug naar de startpagina
 nav.back-to-profile=Terug naar profiel
 nav.back-to-actions=Terug naar acties
 nav.to-identification=Afsluiten
+nav.back-to-identification=Terug naar rekening
 
 
 # HOUSEHOLD.REGISTRATION
