--- a/conf/translation/Interfaces_fr.properties
+++ b/conf/translation/Interfaces_fr.properties
@@ -69,11 +69,13 @@ profile.outro_1=Quand votre profil est complet (les 5 rubriques), passez à l'é
 profile.outro_2=Calculons à l'étape suivante votre capacité d'effacement
 #ACTIONS
 actions.title=3/4 Mon potentiel d'effacement
+enterprise.actions.title=2/2 Mon potentiel d'effacement
 actions.intro=Sur base de votre profil, nous avons sélectionné les meilleures actions pour réduire votre puissance, réparties dans les 5 boites ci-dessous.<br/>Merci de faire vos choix !
 actions.result=Bravo, vos actions permettraient d'ajouter <large><b>{0} watts</b></large> dans la réserve d'effacement citoyenne !
 actions.outro=Pour les y enregistrer définitivement, merci de vous inscrire à l'étape suivante.
 #REGISTER
 register.title=4/4 Je deviens réserviste énergétique
+enterprise.register.title=1/2 Je deviens réserviste énergétique
 register.intro=Pour valider votre participation à la Citizens' Reserve, merci de nous fournir les informations suivantes. Celles-ci sont nécessaires pour :<br><ul><li>Vous faire parvenir nos alertes lorsqu'il faudra mobiliser votre réserve d'effacement<li>Valider votre engagement à participer à l'action (pour ajuster nos prévisions)<li>Eviter les doubles comptages<li>Communiquer les profils d'effacement aux différents acteurs (Gestionnaire de réseau, fournisseurs) pour que les MW de la réserve d'effacement soit pris en compte comme instrument visant à éviter les délestages et réduire vos futures factures.<li>Aucune donnée personnelle ne sera transmise à quiconque sans votre approbation préalable. seules des données agrégées sont transmises aux acteurs du marché de l'électricité </ul>
 register.outro=Merci, vous aurez accès à un récapitulatif ainsi qu'à votre profil d'effacement en validant votre participation, et vos données vous seront envoyées par courriel.
 #RESULTS
