--- a/conf/translation/Interfaces_nl.properties
+++ b/conf/translation/Interfaces_nl.properties
@@ -68,11 +68,13 @@ profile.outro_1=Als uw verbruiksprofiel volledig is ingevuld (de 5 rubrieken), g
 profile.outro_2=In de volgende stap berekenen we uw afschakelreserve
 #ACTIONS
 actions.title=3/4 Mijn afschakelreserve
+enterprise.actions.title=2/3 Mijn afschakelreserve
 actions.intro=Op basis van uw verbruiksprofiel hebben we de meest aangewezen acties opgelijst om uw vermogen te verminderen tijdens dagen met risico op stroomtekort. Deze zijn opgenomen in de 5 rubrieken hieronder.<br/>Maak uw keuzes!
 actions.result=Mooi, uw acties zouden toelaten om <large><b>{0} watt</b></large> toe te voegen aan onze afschakelreserve!
 actions.outro=Om deze definitief vast te leggen, gelieve u aub in te schrijven in de volgende stap
 #REGISTER
 register.title=4/4 Ik word energie-reservist
+enterprise.register.title=1/3 Ik word energie-reservist
 register.intro=Om uw deelname aan Citizens' Reserve te bevestigen, hebben we een aantal gegevens nodig. Deze gegevens zijn nodig om:<br><ul><li>U in te lichten over een aankomend risico op stroomafschakeling en u te vragen om uw afschakelreserve in te zetten.<li>Te bevestigen dat u zal deelnemen aan de actie (om onze voorspellingen bij te stellen).<li>Te vermijden dat acties dubbel worden doorgerekend.<li>Het afschakelprofiel over te maken aan de verschillende actoren (netwerkbeheerder, leveranciers) zodat de kW van onze afschakelreserve mede beschouwd worden als instrument om stroomafschakeling te vermijden.<li>Uw persoonlijke gegevens worden niet aan derden overgemaakt zonder uw voorafgaande toestemming. Enkel onze totaalwaarden worden overgemaakt aan de actoren van de elektriciteitsmarkt. </ul>
 register.outro=Dank, bij het bevestigen van uw deelname krijgt u een overzicht van uw afschakelprofiel. De gegevens zullen u eveneens worden overgemaakt per e-mail.
 #RESULTS
