wip actions enterprise

--- a/conf/translation/Surveys_fr.properties
+++ b/conf/translation/Surveys_fr.properties
@@ -163,6 +163,34 @@ account.button.changeEmail=Changer d'adresse e-mail
 account.info.newEmail=Votre nouvelle adresse e-mail
 account.kit.label=Je souhaite recevoir un kit de sensibilisation pour faire connaitre l'initiative à des amis, voisins, collègues, ...
 
+
+enterprise.office.label=Zone bureau
+enterprise.building.label=Techniques du bâtiment
+enterprise.process.label=Processus
+enterprise.other.label=Autres actions
+
+
 Q10110.label=PC
 Q10120.label=Serveurs
 
+Q10210.label=Chauffage électrique
+Q10220.label=Eclairage intérieur 
+Q10230.label=Eclairage extérieur
+Q10240.label=Enseignes lumineuses 
+Q10250.label=Ventilation 
+Q10260.label=Climatisation 
+Q10270.label=Ascenseurs 
+Q10280.label=Escalators 
+Q10290.label=(Champ libre)
+
+Q10310.label=Moteurs électriques (pompes, …)
+Q10320.label=Fours électriques
+Q10330.label=Froid positif 
+Q10340.label=Froid négatif 
+Q10350.label=Air comprimé 
+Q10360.label=Chargement des véhicules électriques 
+Q10380.label=Séchage 
+Q10390.label=Réacteurs chimiques 
+Q10395.label=(Champ libre)
+
+Q10400.label=(Champ libre)
