--- a/conf/translation/Interfaces_fr.properties
+++ b/conf/translation/Interfaces_fr.properties
@@ -99,7 +99,10 @@ account.terms= \
     <p>[2] Pour les personnes physiques, via la création d’un espace personnel sur le site avec votre e-mail et un mot de passe. </p>
 
 
-enterprise.power=Puissance
-enterprise.begin=Début
-enterprise.duration=Durée
+enterprise.power=Puissance*
+enterprise.begin=Début*
+enterprise.duration=Durée*
 enterprise.description=Description
+
+enterprise.since=à partir de
+enterprise.during=pendant
