wip actions enterprise

--- a/conf/translation/Interfaces_fr.properties
+++ b/conf/translation/Interfaces_fr.properties
@@ -106,3 +106,10 @@ enterprise.description=Description
 
 enterprise.since=à partir de
 enterprise.during=pendant
+
+enterprise.actions.title.placeholder=Champ libre
+enterprise.actions.begin.placeholder=hh:mm
+enterprise.actions.duration.placeholder=hh:mm
+
+enterprise.actions.addline=ajouter une ligne
+
