Implemented alert emails mechanism

--- a/conf/translation/Email_fr.properties
+++ b/conf/translation/Email_fr.properties
@@ -9,5 +9,10 @@ email.registration.content=Bonjour {0} {1},<br/><br/>Merci de votre participatio
 email.legacyuserinvitation.subject=Une nouvelle version de Citizens' Reserve est en ligne !
 #0 = firstname, 1 = lastname, 2 = citizens reserve web site, 3 = space link, 4 = login, 5 = password
 email.legacyuserinvitation.content=Cher membre de la Citizens' Reserve,<br/><br/>Une version améliorée de la première centrale de réduction de la demande électrique, collective et citoyenne a été mise en ligne ! Retrouvez la sur {2}.<br/><br/>Cette nouvelle version utilise une méthodologie <b>plus précise</b> et un formulaire d'inscription <b>plus ergonomique</b>. De <b>nouvelles actions</b> pour réduire ensemble notre consommation électrique et éviter les problèmes de délestages vous sont également proposées.<br/><br/>Une partie des informations que vous aviez fournies précédemment ont pu être importées dans le nouveau système. Cependant, afin de vous envoyer les <b>alertes adéquates</b> et <b>améliorer l'efficacité</b> de Citizens' Reserve, nous vous conseillons vivement de vous connecter à <a href="{3}">votre espace</a> afin de compléter votre profil et vos engagements.<br/><br/>Votre login : {4}<br/>Votre mot de passe : {5}<br/><br/><i>Ce mot de passe a été généré automatiquement. Lors de votre première connexion, vous serez invité à modifier ce mot de passe pour celui de votre choix.</i>
-
-
+#0 = risk date
+email.alert.subject=ALERTE - Risque de délestage le {0}
+#0 = firstname, 1 = lastname, 2 = risk date
+email.alert.content=Bonjour {0}{1},<br/><br/> Un <b>risque de délestage</b> est prévu le {2} ! Nous demandons à tous les réservistes d'agir ce jour-là. Nous comptons sur vous pour faire de l'opération un succès et réaliser les actions que vous vous êtes engagé(e) à effectuer entre 17h et 20h :
+#0 = confirmation page url, 1 = risk answer UUID
+email.alert.confirmation_buttons=Merci de confirmer votre participation :<br/><a class="btn btn-primary btn-lg" href="${0}?key=${1}&answer=true}">Je participe</a><a class="btn btn-primary btn-lg" href="${confirmationPageUrl}?key=${answerUUID}&answer=false}">Je ne participe pas</a>
+email.alert.footer=Vous pouvez à tout moment modifier votre profil de consommation et vos engagements en vous connectant à votre espace.<br/><br/>Merci pour cet engagement citoyen !<br/><br/>Bien à vous,<br/><br/>L'équipe de Citizens' Reserve
