--- a/conf/translation/Interfaces_fr.properties
+++ b/conf/translation/Interfaces_fr.properties
@@ -82,6 +82,7 @@ register.outro=Merci, vous aurez accès à un récapitulatif ainsi qu'à votre p
 results.title=FELICITATIONS !
 results.intro=Vous êtes officiellement notre <large><b>{0} ème</b></large> réserviste énergétique
 result.result=Vos actions ont ajouté <large><b>{0} watts</b></large> dans la réserve d'effacement citoyenne qui s'élève désormais à <large><b>{1} kW</b></large>.<br/>Voici votre profil d'effacement entre 17 et 20 h.
+result.result.enterprise=Vos actions cumulées s'élèvent à <b>{0} kWh</b>.<br/>Vos actions ont ajouté <large><b>{1} watts</b></large> dans la réserve d'effacement citoyenne (17h-20h) qui s'élève désormais à <large><b>{2} kW</b></large>.<br/>
 result.outro=Nous vous remercions chaleureusement de votre participation et vous envoyons vos informations par email.<br/>Vous pouvez à tout moment vous reconnecter sur Citizens' Reserve avec votre login et mot de passe.
 results.stack.name=Vous
 results.trend.name=Votre profil
