--- a/conf/translation/Interfaces_fr.properties
+++ b/conf/translation/Interfaces_fr.properties
@@ -100,13 +100,11 @@ account.terms= \
     <p>[2] Pour les personnes physiques, via la création d’un espace personnel sur le site avec votre e-mail et un mot de passe. </p>
 
 
-enterprise.power=Puissance*
-enterprise.begin=Début*
-enterprise.duration=Durée*
-enterprise.description=Description
-
 enterprise.since=à partir de
 enterprise.during=pendant
+
+enterprise.email.since=à partir de
+enterprise.email.during=pour une durée de
 
 enterprise.actions.title.placeholder=Champ libre
 enterprise.actions.begin.placeholder=hh:mm
