Draft 1 Consommation annuelle

--- a/conf/translation/Surveys_nl.properties
+++ b/conf/translation/Surveys_nl.properties
@@ -118,6 +118,7 @@ powerconsumercategory.options.3.label=Tussen 4501 en 6000 kWh/jaar
 powerconsumercategory.options.4.label=Meer dan 6000 kWh/jaar
 powerconsumercategory.options.5.label=Ik weet het niet
 account.otheremails.label=e-mail adressen van de andere leden van uw huishouden die we eveneens kunnen verwittigen bij risico op stroomonderbreking
+account.otheremails_enterprise.label=e-mail adressen van de andere medewerkers die we eveneens kunnen verwittigen bij risico op stroomonderbreking
 account.sensitizationkit.label=Ik zou graag een sensibiliseringskit ontvangen
 sensitizationkit.options.0.label=voor m'n collega's
 sensitizationkit.options.1.label=m'n buren
