--- a/conf/translation/Surveys_fr.properties
+++ b/conf/translation/Surveys_fr.properties
@@ -118,6 +118,7 @@ powerconsumercategory.options.3.label=4501 à 6000 kWh/an
 powerconsumercategory.options.4.label=Plus de 6000 kWh/an
 powerconsumercategory.options.5.label=Je ne sais pas
 account.otheremails.label=Adresses e-mail de membres de votre ménage à qui nous pouvons également envoyer les alertes
+account.otheremails_enterprise.label=Adresses e-mail des collaborateurs à qui nous pouvons également envoyer les alertes
 account.sensitizationkit.label=Recevoir le kit de sensibilisation
 sensitizationkit.options.0.label=pour mes collègues
 sensitizationkit.options.1.label=mes voisins
